--- a/about.html
+++ b/about.html
@@ -123,9 +123,9 @@
     <div id="about-section" role="complementary" aria-labelledby="About Us">
         <h1>About Us</h1>
     <div class="about-content">
-        <h1>About Us</h1>
+        <h1>About Me</h1>
         <p>This is the About me page content.</p>
-        <p>Hello everyone!I am Urjaswi Banerjee.I was born on 9th April,2004.I completed my schooling from South Point School,Kolkata,WestBengal in India.</p>
+        <p>Hello everyone!I am Urjaswi Banerjee.I was born on 9th April.I completed my schooling from South Point School,Kolkata,WestBengal in India.</p>
         <p>Vestibulum eleifend eget sapien nec feugiat. Fusce ullamcorper tellus sit amet hendrerit bibendum. Integer ac erat nunc. Sed sit amet sagittis massa. Duis eget congue arcu. Quisque consectetur elementum lacus, nec porttitor tortor venenatis nec. Quisque aliquet libero nec hendrerit varius. Integer ac urna elit. Proin ac nisi at sem hendrerit fringilla nec non erat.</p>
     </div>
 
