--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,10 @@
     <div class="contact-content">
         <h1>Contact Me</h1>
         <p>Hello, if you wish to contact me, please fill in the following form:</p>
-
+<form
+  action="https://formspree.io/f/xrgwboyj"
+  method="POST"
+>
         <form action="" method="post">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required aria-label="Your Name">
