--- a/contact.html
+++ b/contact.html
@@ -62,11 +62,7 @@
     <div class="contact-content">
         <h1>Contact Me</h1>
         <p>Hello, if you wish to contact me, please fill in the following form:</p>
-<form
-  action="https://formspree.io/f/xrgwboyj"
-  method="POST"
->
-        <form action="" method="post">
+        <form action="https://formspree.io/f/xrgwboyj" method="POST">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required aria-label="Your Name">
 
@@ -83,9 +79,9 @@
     <!-- About section with some info about you -->
     <div class="about-content">
         <h2>My Contact Links</h2>
-        <p>My linkedin profile link is: https://www.linkedin.com/in/urjaswi-banerjee-aa424b248</p>
-       <p>My github profile is: https://github.com/LLawliet0904</p>
-<p> My instagram is: frosty_vinter</p>
- </div>
+        <p>My LinkedIn profile link is: <a href="https://www.linkedin.com/in/urjaswi-banerjee-aa424b248" target="_blank">Urjaswi-Banerjee</a></p>
+        <p>My GitHub profile is: <a href="https://github.com/LLawliet0904" target="_blank">LLawliet0904</a></p>
+        <p>My Instagram is: frosty_vinter</p>
+    </div>
 </body>
 </html>
