--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
         <p>My LinkedIn profile link is: <a href="https://www.linkedin.com/in/urjaswi-banerjee-aa424b248" target="_blank">Urjaswi-Banerjee</a></p>
         <p>My GitHub profile is: <a href="https://github.com/LLawliet0904" target="_blank">LLawliet0904</a></p>
         <p>My Instagram is: frosty_vinter</p>
+        <p>My email id is: urjaswibanerjee@gmail.com</p>
     </div>
 </body>
 </html>
