--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
         <!-- Project 1 -->
         <div class="project-item">
             <h3>Project 1</h3>
-            <p>Description of Project 1</p>
+            <p>For this project i built a working calculator using html and css.Click below to see the project.</p>
             <a href="project1.html">View Project</a>
         </div>
         
