--- a/about.html
+++ b/about.html
@@ -128,16 +128,48 @@
         <section id="about-section" role="region" aria-labelledby="about-us-label">
             <div class="about-content">
                 <h1 id="about-us-label">About Me</h1>
-                <p>Hello Everyone!I am Urjaswi Banerjee.I was born on 9th April.I studied in South Point School for my junior school diploma in Kolkata,West Bengal.After that i moved to South Point High School for my middle school and high school diploma.On 22nd May,2023 i was fortunate enough to receive the Reliance UG Scholarship after passing the aptitude test.The scholarship currently covers 50% of all of my education costs.I have studied Bachelor in Buisnedd Administration from Dinabandhu Andrews Institute of Technology and Management,Kolkata for one year(sept 2022-sept 2023). Currently, I am pursuing my studies at the Indian Institute of Technology Madras (IITM) in BS in Data Science and Programming. I have an interest in a lot of things and love exploring new topics and challenges.</p>
+                <p>Hello Everyone!I am Urjaswi Banerjee.I was born on 9th April.I studied in South Point School for my junior school diploma in Kolkata,West Bengal.After that i moved to South Point High School for my middle school and high school diploma.On 22nd May,2023 i was fortunate enough to receive the Reliance UG Scholarship after passing the aptitude test.The scholarship currently covers 50% of all of my education costs.I have studied Bachelor in Buisnedd Administration from Dinabandhu Andrews Institute of Technology and Management,Kolkata for one year(sept 2022-sept 2023). Currently, I am pursuing my studies at the Indian Institute of Technology Madras (IITM) in BS in Data Science and Programming.I have cleared several entrance exams including JEE Mains,NEET,NATA,WBJEE and several more.I know programming languages like Python,C,C++,Postgresql,etc.I have an interest in a lot of things and love exploring new topics and challenges.</p>
               <p>Below I have attached some of my certificates that i have achieved through all these years.</p>
                 <div class="slideshow-container">
                     <div class="mySlides">
-                        <img src="testimage.jpg.jpg" alt="Certificate 1" style="width:100%;">
+                        <img src="html and css.jpg" alt="Certificate 1" style="width:100%;">
                     </div>
                     <div class="mySlides">
-                        <img src="paper.png" alt="Certificate 2" style="width:100%;">
+                        <img src="html python.jpg" alt="Certificate 2" style="width:100%;">
                     </div>
-
+<div class="mySlides">
+                        <img src="sql.jpg" alt="Certificate 3" style="width:100%;">
+                    </div>
+<div class="mySlides">
+                        <img src="python.jpg" alt="Certificate 4" style="width:100%;">
+                    </div>
+<div class="mySlides">
+                        <img src="unity.jpg" alt="Certificate 5" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="C++.jpg" alt="Certificate 6" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="excel1.jpg" alt="Certificate 7" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="ms excel2.jpg" alt="Certificate 8" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="excel3.jpg" alt="Certificate 9" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="excel 4.jpg" alt="Certificate 10" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="leadership skills.jpg" alt="Certificate 11" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="goldman sauch.jpg" alt="Certificate 12" style="width:100%;">
+                    </div>
+                  <div class="mySlides">
+                        <img src="google cert.jpg" alt="Certificate 13" style="width:100%;">
+                    </div>
                     <!-- Buttons to control the slides -->
                     <button class="prev" aria-label="Previous slide" onclick="changeSlide(-1)">&#10094;</button>
                     <button class="next" aria-label="Next slide" onclick="changeSlide(1)">&#10095;</button>
