--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                         <img src="C++.jpg" alt="Certificate 6" style="width:100%;">
                     </div>
                   <div class="mySlides">
-                        <img src="excel1.jpg" alt="Certificate 7" style="width:100%;">
+                        <img src="microsoft excel cert.jpg" alt="Certificate 7" style="width:100%;">
                     </div>
                   <div class="mySlides">
                         <img src="ms excel2.jpg" alt="Certificate 8" style="width:100%;">
