--- a/home.html
+++ b/home.html
@@ -92,7 +92,42 @@
             <p>Description of Project 2</p>
             <a href="project2.html"><i class="fas fa-eye"></i> View Project</a>
         </div>
-        
+        <div class="work">
+    <h2>My Work Experience</h2>
+
+    <!-- Work 1 -->
+    <div class="work-item">
+        <h3><i class="fas fa-briefcase"></i> Work 1</h3>
+        <p>Description of your work experience at workplace 1. List your roles, accomplishments, etc.</p>
+    </div>
+
+    <!-- Work 2 -->
+    <div class="work-item">
+        <h3><i class="fas fa-briefcase"></i> Work 2</h3>
+        <p>Description of your work experience at workplace 2. List your roles, accomplishments, etc.</p>
+    </div>
+
+    <!-- Add more work experiences as needed... -->
+</div>
+<style>
+    /* ... Your existing CSS ... */
+
+    .work { margin: 50px auto; max-width: 600px; }
+
+    .work-item {
+        background: #f9eac8;
+        border-radius: 5px;
+        padding: 15px;
+        margin-top: 20px;
+        animation: fadeIn 2s;
+    }
+
+    .work-item h3 {
+        font-family: 'Comfortaa', cursive;
+        font-size: 1.5em;
+        color: #704e37;
+    }
+</style>
         <!-- Add more projects as needed... -->
     </div>
 </body>
