--- a/home.html
+++ b/home.html
@@ -98,13 +98,13 @@
     <!-- Work 1 -->
     <div class="work-item">
         <h3><i class="fas fa-briefcase"></i> Work 1</h3>
-        <p>Description of your work experience at workplace 1. List your roles, accomplishments, etc.</p>
+        <p>Since i am a full time student i dont have work experience currently.</p>
     </div>
 
     <!-- Work 2 -->
     <div class="work-item">
         <h3><i class="fas fa-briefcase"></i> Work 2</h3>
-        <p>Description of your work experience at workplace 2. List your roles, accomplishments, etc.</p>
+        <p>None</p>
     </div>
 
     <!-- Add more work experiences as needed... -->
