--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="flex-container">
         <a href="home.html" class="flex-slide home">
             <div class="flex-title">Home</div>
-            <div class="flex-about">Click me to visit the Home.</div>
+            <div class="flex-about">Click me to visit.</div>
         </a>
 
         <a href="about.html" class="flex-slide about">
