--- a/home.html
+++ b/home.html
@@ -89,7 +89,13 @@
         <!-- Project 2 -->
         <div class="project-item">
             <h3><i class="fas fa-project-diagram"></i> Project 2</h3>
-            <p>Description of Project 2</p>
+            <p>Project 2 is one of my early days project which is a game of rock,paper,scissors built completely by python.</p>
+            <a href="https://replit.com/@LLawliet0904/RockPaperScissors-game?v=1"><i class="fas fa-eye"></i> View Project</a>
+        </div>
+
+      <div class="project-item">
+            <h3><i class="fas fa-project-diagram"></i> Project 3</h3>
+            <p>Description of Project 3</p>
             <a href="project2.html"><i class="fas fa-eye"></i> View Project</a>
         </div>
         <div class="work">
