--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urjaswi Banerjee</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <style>
+    <link rel="icon" type="image/x-icon" href="UB-logos.jpeg">
+<style>
         /* Add your custom styles here */
         /* ... */
         @import url("https://fonts.googleapis.com/css?family=Raleway");
