--- a/home.html
+++ b/home.html
@@ -95,23 +95,44 @@
 
       <div class="project-item">
             <h3><i class="fas fa-project-diagram"></i> Project 3</h3>
-            <p>Description of Project 3</p>
-            <a href="project2.html"><i class="fas fa-eye"></i> View Project</a>
+            <p>I got commissioned to build a romantic webpage for 14th February 2024.</p>
+            <a href="message.html"><i class="fas fa-eye"></i> View Project</a>
         </div>
         <div class="work">
     <h2>My Work Experience</h2>
 
     <!-- Work 1 -->
+          <div class="work-item">
+              <h3><i class="fas fa-briefcase"></i> Work 1</h3>
+              <p>Research Consultant</p>
+            <h3>at</h3>
+            <p>Worldquant Brain</p>
+            <h3>from 11/2023 to present</h3>
+          </div>
+
+          <!-- Work 2 -->
+
+          <div class="work-item">
+              <h3><i class="fas fa-briefcase"></i> Work 2</h3>
+              <p>AI and Cloud Computing Intern</p>
+            <h3>at</h3>
+            <p>IBM</p>
+            <h3>from 12/2023 to 01/2024</h3>
+          </div>
+
+          <!-- Work 3 -->
+
     <div class="work-item">
-        <h3><i class="fas fa-briefcase"></i> Work 1</h3>
-        <p>Since i am a full time student i dont have work experience currently.</p>
+        <h3><i class="fas fa-briefcase"></i> Work 3</h3>
+        <p>Data Analyst</p>
+      <h3>at</h3>
+      <p>  Ernst and Young Global Delivery Services</p>
+      <h3>from 12/2023 to 02/2024</h3>
     </div>
 
-    <!-- Work 2 -->
-    <div class="work-item">
-        <h3><i class="fas fa-briefcase"></i> Work 2</h3>
-        <p>None</p>
-    </div>
+
+
+         
 
     <!-- Add more work experiences as needed... -->
 </div>
