--- a/message.html
+++ b/message.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>From Sreyasi</title>
+    <title>From Unknown</title>
     <link rel="stylesheet" type="text/css" href="style.css">        
     <style>
         body {
@@ -269,7 +269,7 @@
             <div class="heart_bg"></div> <!-- New heart -->
         </div>
         <div id="messageBox">
-            Sotti bolte Ami onek din dhore bhabchi ata niye...please aita jeno kauke bolo na...I request...It has been more than 1 year... I thought this feeling will fade away with time... But it is constant... Ami beshi kichu bolte parchi na karon akta odhbhut feeling kaj korche... Amar tomake bhalo lage... Asha kori ki bolte cheyechi bujhte perecho... Jani hoyto tumi er por theke kotha bola bondho kore debe... I wanted to share it... Bakita purota tomar opor... Aktai request keu jeno na jante pare... Ai request ta rekho
+            Write a message
         <!-- Will you be my Valentine? -->
         </div>
         <button class='hoverme' id="loveButton" onclick="showConfetti()" aria-label="Option to accept the proposal">I like you too</button>
