--- a/home.html
+++ b/home.html
@@ -56,10 +56,10 @@
         }
         .project-item a {
             display: inline-block;
-            color: #D4D4D4;
+            color: #fff;
             text-decoration: none;
             padding: 10px 20px;
-            background: #f3cab5; 
+            background: #55D0FF; 
             border-radius: 5px;
             font-family: 'Courgette', cursive;
             transition: all 0.3s ease;
