--- a/home.html
+++ b/home.html
@@ -50,7 +50,7 @@
             animation: fadeIn 2s;
         }
         .project-item h3 {
-            color: #D4D4D4;
+            color: #4e5758e5;
             font-size: 1.5em;
             font-family: 'Comfortaa', cursive;
         }
