--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
     .work-item h3 {
         font-family: 'Comfortaa', cursive;
         font-size: 1.5em;
-        color: #D4D4D4;
+        color: #4e5758e5;
     }
 </style>
         <!-- Add more projects as needed... -->
