--- a/home.html
+++ b/home.html
@@ -56,6 +56,7 @@
             color: #4e5758e5;
             font-size: 1.5em;
             font-family: 'Comfortaa', cursive;
+            animation: fadeInDown 2s;
         }
         .project-item a {
             display: inline-block;
@@ -72,15 +73,7 @@
             color: #E9E9E9; /* Text color from the specified palette */
             background: #7CE8FF; /* Light blue background on hover */
         }
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-            to {
-                opacity: 1;
-            }
-        }
-         @keyframes fadeInDown {
+        @keyframes fadeInDown {
             from {
                 opacity: 0;
                 transform: translateY(-20px);
