--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
         p {
             font-size: 1.2rem;
             font-family: 'Courgette', cursive;
-            color: #707070; /* Text color from the specified palette */
+            background: linear-gradient(to left, #0080BF, #00ACDF, #55D0FF, #7CE8FF, #CCF9FF);
         }
         .projects {
             margin: 50px auto;
