--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
             font-size: 2.5rem;
             margin-bottom: 1rem;
             color: #454545; /* Text color from the specified palette */
-            background: linear-gradient(to left, #0080BF, #00ACDF, #55D0FF, #7CE8FF, #CCF9FF);
+            background: linear-gradient(to left, #0080BF, #00ACDF, #55D0FF,#454545,#707070,#9A9A9A,#D4D4D4,#E9E9E9, #7CE8FF, #CCF9FF);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             animation: fadeInDown 2s;
