--- a/about.html
+++ b/about.html
@@ -128,9 +128,9 @@
         <section id="about-section" role="region" aria-labelledby="about-us-label">
             <div class="about-content">
                 <h1 id="about-us-label">About Me</h1>
-                <p>Hello Everyone!I am Urjaswi Banerjee.I was born on 9th April.I studied in South Point School for my junior school diploma in Kolkata,West Bengal.After that i moved to South Point High School for my middle school and high school diploma.On 22nd May,2023 i was fortunate enough to receive the Reliance UG Scholarship after passing the aptitude test.The scholarship currently covers 50% of all of my education costs.I have studied Bachelor in Buisnedd Administration from Dinabandhu Andrews Institute of Technology and Management,Kolkata for one year(sept 2022-sept 2023). Currently, I am pursuing my studies at the Indian Institute of Technology Madras (IITM) in BS in Data Science and Programming.
-                    <p>I have cleared several entrance exams including JEE Mains,NEET,NATA,WBJEE and several more.I know programming languages like Python ,C ,C++ ,Postgresql ,etc.I have an interest in a lot of things and love exploring new topics and challenges.</p>
-              <p>Below I have attached some of my certificates that i have achieved through all these years.</p>
+                <p>Hello Everyone!I am Urjaswi Banerjee.I was born on 9th April.I studied in South Point School for my junior school diploma in Kolkata,West Bengal.After that i moved to South Point High School for my middle school and high school diploma.On 22nd May,2023 i was fortunate enough to receive the Reliance UG Scholarship after passing the aptitude test.The scholarship currently covers 50% of all of my education costs.I have studied Bachelor in Buisness Administration from Dinabandhu Andrews Institute of Technology and Management,Kolkata for one year(sept 2022-sept 2023). Currently, I am pursuing my studies at the Indian Institute of Technology Madras (IITM) in BS in Data Science and Programming.
+                    <p>Throughout my educational journey, I’ve cleared multiple competitive exams including JEE Mains, NEET, NATA, WBJEE, among others. My programming skills extend across Python, C, Javascript, Java, PostgreSQL, and I have recently ventured into areas like Machine Learning, full-stack development, DSA, and advanced Python libraries such as NumPy, pandas, scikit-learn, and matplotlib. My passion for learning keeps me exploring diverse subjects and facing new challenges head-on.</p>
+              <p>Attached below are some of the certificates I have earned over the years including those of the hackathons i have won and the internships i have completed.</p>
                 <div class="slideshow-container">
                     <div class="mySlides">
                         <img src="html and css.jpg" alt="Certificate 1" style="width:100%;">
@@ -147,21 +147,21 @@
 <div class="mySlides">
                         <img src="unity.jpg" alt="Certificate 5" style="width:100%;">
                     </div>
-                  <div class="mySlides">
+<!--                   <div class="mySlides">
                         <img src="C++.jpg" alt="Certificate 6" style="width:100%;">
-                    </div>
+                    </div> -->
                   <div class="mySlides">
                         <img src="microsoft excel cert.jpg" alt="Certificate 7" style="width:100%;">
                     </div>
                   <div class="mySlides">
                         <img src="ms excel2.jpg" alt="Certificate 8" style="width:100%;">
                     </div>
-                  <div class="mySlides">
+<!--                   <div class="mySlides">
                         <img src="excel3.jpg" alt="Certificate 9" style="width:100%;">
-                    </div>
-                  <div class="mySlides">
+                    </div> -->
+<!--                   <div class="mySlides">
                         <img src="excel 4.jpg" alt="Certificate 10" style="width:100%;">
-                    </div>
+                    </div> -->
                   <div class="mySlides">
                         <img src="leadership skills.jpg" alt="Certificate 11" style="width:100%;">
                     </div>
