--- a/about.html
+++ b/about.html
@@ -133,6 +133,22 @@
               <p>Attached below are some of the certificates I have earned over the years including those of the hackathons i have won and the internships i have completed.</p>
                 <div class="slideshow-container">
                     <div class="mySlides">
+                        <img src="Iitm fnd cert.jpg" alt="Certificate 14" style="width:100%;">
+                    </div>
+                    <div class="mySlides">
+                        <img src="Wrld qnt 8th.jpg" alt="Certificate 15" style="width:100%;">
+                    </div>
+                    <div class="mySlides">
+                        <img src="Wrld qnt gold.jpg" alt="Certificate 16" style="width:100%;">
+                    </div>
+                    <div class="mySlides">
+                        <img src="Intrn cert 1.jpg" alt="Certificate 17" style="width:100%;">
+                    </div>
+                    <div class="mySlides">
+                        <img src="Intern cert 2.jpg" alt="Certificate 18" style="width:100%;">
+                    </div>
+                
+                    <div class="mySlides">
                         <img src="html and css.jpg" alt="Certificate 1" style="width:100%;">
                     </div>
                     <div class="mySlides">
@@ -144,29 +160,30 @@
 <div class="mySlides">
                         <img src="python.jpg" alt="Certificate 4" style="width:100%;">
                     </div>
-<div class="mySlides">
-                        <img src="unity.jpg" alt="Certificate 5" style="width:100%;">
+                    <div class="mySlides">
+                        <img src="Intelli cert 1.jpg" alt="Certificate 20" style="width:100%;">
                     </div>
-<!--                   <div class="mySlides">
-                        <img src="C++.jpg" alt="Certificate 6" style="width:100%;">
-                    </div> -->
+                    <div class="mySlides">
+                        <img src="Intelli cert 2.jpg" alt="Certificate 21" style="width:100%;">
+                    </div>
+<div class="mySlides">
+                        <img src="C cert.jpg" alt="Certificate 22" style="width:100%;">
+                    </div>
                   <div class="mySlides">
                         <img src="microsoft excel cert.jpg" alt="Certificate 7" style="width:100%;">
                     </div>
                   <div class="mySlides">
                         <img src="ms excel2.jpg" alt="Certificate 8" style="width:100%;">
                     </div>
-<!--                   <div class="mySlides">
-                        <img src="excel3.jpg" alt="Certificate 9" style="width:100%;">
-                    </div> -->
-<!--                   <div class="mySlides">
-                        <img src="excel 4.jpg" alt="Certificate 10" style="width:100%;">
-                    </div> -->
+
                   <div class="mySlides">
                         <img src="leadership skills.jpg" alt="Certificate 11" style="width:100%;">
                     </div>
                   <div class="mySlides">
                         <img src="goldman sauch.jpg" alt="Certificate 12" style="width:100%;">
+                    </div>
+                    <div class="mySlides">
+                        <img src="Tata Internship.jpg" alt="Certificate 19" style="width:100%;">
                     </div>
                   <div class="mySlides">
                         <img src="google cert.jpg" alt="Certificate 13" style="width:100%;">
