--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
                  }
 
                  h1 {
+                     text-align: center;
                      font-size: 2.5em;
                      font-weight: bold;
                      text-shadow: 2px 2px #707070;  /* Subtle shadow for the header */
