--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
    <div id="app">
         <section id="about-section" role="region" aria-labelledby="about-us-label">
             <div class="about-content">
-                <h1 id="about-us-label">About Me</h1>
+                <h1 id="about-us-label" style="color: #E9E9E9;">About Me</h1>
                 <p>Hello Everyone!I am Urjaswi Banerjee.I was born on 9th April.I studied in South Point School for my junior school diploma in Kolkata,West Bengal.After that i moved to South Point High School for my middle school and high school diploma.On 22nd May,2023 i was fortunate enough to receive the Reliance UG Scholarship after passing the aptitude test.The scholarship currently covers 50% of all of my education costs.I have studied Bachelor in Buisness Administration from Dinabandhu Andrews Institute of Technology and Management,Kolkata for one year(sept 2022-sept 2023). Currently, I am pursuing my studies at the Indian Institute of Technology Madras (IITM) in BS in Data Science and Programming.
                     <p>Throughout my educational journey, I’ve cleared multiple competitive exams including JEE Mains, NEET, NATA, WBJEE, among others. My programming skills extend across Python, C, Javascript, Java, PostgreSQL, and I have recently ventured into areas like Machine Learning, full-stack development, DSA, and advanced Python libraries such as NumPy, pandas, scikit-learn, and matplotlib. My passion for learning keeps me exploring diverse subjects and facing new challenges head-on.</p>
               <p>Attached below are some of the certificates I have earned over the years including those of the hackathons i have won and the internships i have completed.</p>
