--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                        }
 
                        body, html, #app {
-                           font-family: 'Comfortaa', Courgette-Regular;
+                           font-family: 'Comfortaa', cursive;
 
                            background: linear-gradient(to right, #0080BF, #00ACDF, #55D0FF, #7CE8FF, #CCF9FF);
                            color: #454545;
