--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa|Courgette" rel="stylesheet">
     <style>
           @keyframes fadeInDown {
                            from {
@@ -18,7 +18,8 @@
                        }
 
                        body, html, #app {
-                           font-family: 'Comfortaa', cursive;
+                           font-family: 'Courgette', cursive;
+                           font-size: 1.2 rem;
 
                            background: linear-gradient(to right, #0080BF, #00ACDF, #55D0FF, #7CE8FF, #CCF9FF);
                            color: #454545;
