--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,8 @@
     <div class="about-content">
         <h2>My Contact Links</h2>
         <p>My LinkedIn profile link is: <a href="https://www.linkedin.com/in/urjaswi-banerjee-aa424b248" target="_blank">Urjaswi-Banerjee</a></p>
-        <p>My GitHub profile is: <a href="https://github.com/LLawliet0904" target="_blank">LLawliet0904</a></p>
-        <p>My Instagram is: frosty_vinter</p>
+        <p>My GitHub profile is: <a href="https://github.com/Frosty-Winter-Snowfall" target="_blank">Frosty-Winter-Snowfall</a></p>
+        <p>My Instagram is: frsoty_winter_snowfall</p>
         <p>My email id is: urjaswibanerjee@gmail.com</p>
     </div>
 </body>
