--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Urjaswi Banerjee</title>
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Courgette&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="UB-logos.jpeg">
 <style>
         /* Add your custom styles here */
         /* ... */
-        @import url("https://fonts.googleapis.com/css?family=Raleway");
+        @import url("https://fonts.googleapis.com/css?family=Courgette");
         body {
             margin: 0;
             padding: 0;
-            font-family: "Raleway", sans-serif;
+            font-family: "Courgette", 'cursive';
         }
 
         .flex-container {
@@ -22,7 +22,7 @@
             width: 100%;
             display: -webkit-flex;
             display: flex;
-            justify-content: center; /* Center the flex items horizontally */
+            justify-content: center; 
             overflow: hidden;
         }
 @media screen and (max-width: 768px) {
@@ -77,6 +77,8 @@
   }
 }
         .flex-slide {
+            /* text-decoration: none; */
+            text-decoration-color: #7ad5ff;
             -webkit-flex: 1;
             /* Safari 6.1+ */
             -ms-flex: 1;
@@ -110,10 +112,12 @@
         }
 
         .flex-slide:hover {
+            text-decoration: underline; /* If you want underline on hover */
+            text-decoration-color: #454545;
             -webkit-flex-grow: 3;
             flex-grow: 3;
         }
-.home {
+        .home {
             background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://wallpaperaccess.com/full/1387867.jpg);
             background-size: cover;
             background-position: center center;
@@ -121,18 +125,18 @@
         }
 
         .about {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/769286/beach-2089959_1280.jpg);
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://wallpaperaccess.com/full/3502336.jpg);
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
-        }
+}
 
         .contact {
-            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://wallpapers.com/images/featured/720p-nature-background-te0eo4yinuw49nh1.jpg);
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://wallpaperaccess.com/full/141279.jpg);
             background-size: cover;
             background-position: center center;
             background-attachment: fixed;
-        }
+}
         .spinner {
             position: fixed;
             top: 0;
@@ -250,8 +254,7 @@
         });
     </script>
 
-    <!-- Optional: Add your JavaScript here if needed -->
-    <!-- ... -->
+    
 
 </body>
 </html>
